# blog

./: .gitignore  README.md
backend/: .dockerignore  .env  .env-example  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yaml
backend/db/migrations/: 20221024125034_create-articles-table.sql  20221112184540_articles-table.down.sql  20221112184540_articles-table.up.sql
backend/src/: database.rs  lib.rs  main.rs  model.rs
backend/src/database/: articles.rs  migrate.rs  mod.rs  users.rs
backend/src/models/: article.rs  user.rs
backend/src/routes/: articles.rs  index.rs  mod.rs
backend/tests/: article_tests.rs
frontend/: Cargo.toml  astro.config.mjs  elm.json  index.html  main.js  package-lock.json  package.json  styles.css  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: Layout.elm  Main.elm  main.rs
frontend/src/App/: App.fs
frontend/src/Routes/: Blog.elm  Home.elm
frontend/src/components/: footer.rs
frontend/src/pages/: index.astro
test-frontend/: elm.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
test-frontend/src/: Main.elm
test-frontend/src/Pages/: Home_.elm
