[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = ["macros", "migrate", "offline"]

[default.databases.blog]
url = ''
